# MLagent

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
docs/research/: 2026-06-26-hooks-skills.md  2026-06-26-memory-system.md  2026-06-26-tech-stack.md  2026-06-26-ui-panels.md  README.md
docs/superpowers/plans/: 2026-06-22-mlagent-mvp-implementation.md  2026-06-22-mlagent-mvp-task-handoff.md
docs/superpowers/specs/: 2026-06-22-mlagent-claude-code-plugin-design.md  2026-06-22-mlagent-research-fit-evaluation.md  2026-06-26-mlagent-redesign-spec.md
hooks/: hooks.json  post-tool-batch  post-tool-use  session-start  stop
mlagent_memory/: cli.py  constants.py  context.py  errors.py  experience.py  export.py  hooks.py  index.py  io.py  knowledge.py  overview.py  raw.py  repo.py  schemas.py  skill_extraction.py  skill_versions.py
skills/distill-run-to-memory/: SKILL.md
skills/explore-optimization/: SKILL.md
skills/promote-memory-to-skill/: SKILL.md
skills/retrain-from-memory/: SKILL.md
skills/start-modeling-session/: SKILL.md
tests/: test_cli.py  test_context.py  test_entrypoints.py  test_export.py  test_index.py  test_knowledge.py  test_overview.py  test_raw_experience.py  test_repo.py  test_schemas.py  test_skill_extraction.py  test_skill_versions.py
