[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlagent-memory"
version = "0.1.0"
description = "Local-first ML modeling memory system for Claude Code"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "pypdf>=5.0",
  "langchain-text-splitters>=0.3",
  "sqlite-utils>=3.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mlagent-memory = "mlagent_memory.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
